# marmite

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  CRUSH.md  Cargo.toml  Dockerfile  IMPROVE_TEMPLATES.md  README.md  file_processing.rs  init.rs  justfile  maskfile.md  mise.toml  planning.md  pyproject.toml  report.md  rust-toolchain.toml  server.rs  site_data.rs
.agents/skills/marmite/: SKILL.md
.agents/skills/marmite-development/: SKILL.md
.github/: _hero.md  contributors.py  marmite.yaml  prepare_site.sh
.github/workflows/: build-release.yml  build.yaml  container.yml  cross.yml  main.yml  manual-publish-site.yml  release-pkgs.yml  release-python.yml
assets/toolbar/: editor.css  editor.html  editor.js  toolbar.css  toolbar.js
example/: marmite.yaml
example/ai/: llms.txt
example/content/: 2023-01-01-pagination.md  2023-01-02-paginacion.md  2024-10-19-new-post.md  2024-10-19-what-is-marmite-static-site-generator.md  2024-10-20-21-05-content-types.md  2024-10-20-content-types.md  2024-10-21-what-is-marmite-static-site-generator.md  2024-10-24-21-05-12-getting-started.md  2024-10-24-getting-started.md  2024-10-30-python-tutorial-part-1.md  2024-11-05-python-tutorial-part-2.md  2024-11-12-python-tutorial-part-3.md  2024-11-14-hello-streams.md  2024-11-26-marmite-command-line-interface.md  2025-01-22-series-feature.md  2025-01-31-file-mapping-feature.md  2025-01-31-shortcodes-demo.md  2025-01-31-shortcodes-guide.md  2025-07-02-20-25-35-automatic-image-download.md  2025-07-04-23-27-46-draft-posts-guide.md  2025-07-05-12-52-03-configurable-markdown-parser.md  2025-07-06-15-07-27-link-checker-with-lychee.md  2025-07-08-17-38-57-template-reference.md  2025-07-10-20-31-29-configuration-reference.md  2025-07-11-20-31-29-themes-feature.md  2025-07-12-23-30-09-series-feature.md  2025-07-18-configuration-reference.md  2025-07-18-markdown-source-publishing.md  2025-07-18-streams-guide.md  2025-07-18-template-reference.md  2025-07-19-automatic-image-download.md  2025-07-19-indieweb-compliance.md  2025-07-20-configurable-markdown-parser.md  2025-07-21-filename-based-streams.md  2025-07-21-link-checker-with-lychee.md  2025-07-21-link-checking.md  2025-07-21-themes-feature.md  2025-07-23-23-34-06-marmite-0-2-6-release-notes.md  2025-07-23-marmite-0-2-6-release-notes.md  2025-08-01-automatic-sitemap-generation.md  (+68 more)
example/content/2026-07-03-just-another-test/: es-solo-otra-prueba.md  just-another-test.md  pt-apenas-outro-test.md
example/content/docs/: atproto-standard-site.md  automatic-image-download.md  automatic-sitemap-generation.md  configurable-markdown-parser-options.md  configuration-reference.md  content-management-api.md  content-types.md  creating-translated-content-from-cli.md  customizing-templates.md  enabling-comments.md  file-mapping-feature.md  filename-based-streams-organize-content-with-file-naming.md  folder-level-frontmatter-defaults.md  frontmatter.yaml  getting-started.md  hosting.md  how-to-run-a-link-checker-on-your-marmite-website.md  how-to-use-draft-posts-in-marmite.md  image-optimization-and-resizing.md  indieweb-compliance.md  installation.md  internal-link-validation.md  introducing-themes-in-marmite.md  markdown-format.md  markdown-source-publishing.md  marmite-command-line-interface.md  marmite-editor.md  marmite-playground.md  marmite-toolbar.md  media-organization-with-slug-based-subfolders.md  organizing-content-with-series-in-marmite.md  paginacion.md  pagination.md  porque-usar-o-marmite.md  python-installation-with-pip.md  redirect-aliases.md  remote-theme-download.md  shortcodes-demo.md  shortcodes-guide.md  show-urls-dry-run-command.md  (+5 more)
example/content/just-a-test/: es-solo-una-prova.md  es-solo-una-prueba.md  (+2 more)
example/extrastatic/: index.html
example/scripts/: install.ps1  install.sh
example/shortcodes/: authors.html  card.html  gallery.html  install.md  pages.html  posts.html  series.html  socials.md  spotify.html  streams.html  tags.html  toc.html  youtube.html
example/site/: about.html  blog-post.html  index.html  no-metadata.html  pages.html  second-blog-post.html
example/static/: custom.css  custom.js  github-light.min.css  marmite.css  marmite.js  menu.js  search.js  style.css  theme-switcher.js
example/templates/: base.html  base_feeds.html  comments.html  content.html  content_authors.html  content_date.html  content_title.html  custom_index.html.example  group.html  group_author_avatar.html  json_ld_author.html  json_ld_content.html  json_ld_index.html  list.html  pagination.html  sitemap.xml
example/theme_template/: README.md  theme.json  theme.md
example/workspace/: marmite-workspace.yaml
playground/: Cargo.toml  Dockerfile  docker-compose.yml
playground/seed/: marmite.yaml
playground/seed/content/: 2024-01-01-hello-world.md  2024-01-02-goodbye-world.md  about.md
playground/src/: config.rs  error.rs  handlers.rs  main.rs  renderer.rs  session.rs
playground/static/: app.js  index.html  style.css
python/: MANIFEST.in  PYTHON-README.md
python/marmite/: __init__.py  __main__.py
src/: cli.rs  config.rs  constants.rs  content.rs  embedded.rs  feed.rs  file_processing.rs  gallery.rs  highlight.rs  image_provider.rs  image_resize.rs  init.rs  linkcheck.rs  main.rs  markdown.rs  parser.rs  re.rs  render.rs  robots.rs  server.rs  shortcodes.rs  site.rs  slugify.rs  templates.rs  tera_filter.rs  tera_functions.rs  theme_manager.rs  workspace.rs
src/atproto/: auth.rs  client.rs  credentials.rs  mod.rs  publish.rs
src/tests/: README.md  config.rs  content.rs  embedded.rs  feed.rs  gallery.rs  image_provider.rs  image_resize.rs  main.rs  parser.rs  re.rs  server.rs  shortcodes.rs  site.rs  slugify.rs  templates.rs  tera_filter.rs  tera_functions.rs  theme_manager.rs  workspace.rs
tests/: README.md  basic_functionality.rs  content_generation.rs  example_site.rs  features.rs  folder_frontmatter.rs  highlight.rs  i18n.rs  image_resize_integration.rs  naming_conventions.rs  site_generation.rs  streams.rs  tera_compat.rs  themes.rs  wikilinks_integration.rs  workspace.rs
(+85 files in other folders)
