[package]
name = "marmite"
version = "0.2.6"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Marmite is the easiest static site generator."
homepage = "https://marmite.blog"
repository = "https://github.com/rochacbruno/marmite"
readme = "README.md"
keywords = ["web", "blog", "static", "site", "html"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
hotwatch = "0.5"
tera = {version = "1.20", features = ["preserve_order"]}
comrak = { version = "0.41.0", features = ["shortcodes"], default-features = false }
walkdir = "2.5"
chrono = { version = "0.4", features = ["serde"] }
frontmatter-gen = { version = "0.0.5", features=["default"] }
tiny_http = "0.12"
clap = { version = "4.5.43", features = ["derive"] }
fs_extra = "1.3"
regex = "1"
unicode-normalization = "0.1"
log = "0.4"
env_logger = "0.11.8"
url = "2.5.4"
rust-embed = { version = "8.7.2", features = ["interpolate-folder-path"] }
glob = "0.3"
lazy_static = "1.5.0"
indexmap = { version = "2.10.0", features = ["serde"] }
rss = "2.0.12"
rayon = "1.11.0"
ureq = "3.0.12"
zip = "4.3.0"
urlencoding = "2.1.3"
image = "0.25.6"

[dev-dependencies]
tempfile = "3.16.0"

[profile.release]
codegen-units = 1
incremental = false
panic = "abort"
lto = true
opt-level = "s"
strip = true

[profile.dev]
incremental = false
