[package]
name = "marmite"
version = "0.2.7"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Marmite is the easiest static site generator."
homepage = "https://marmite.blog"
repository = "https://github.com/rochacbruno/marmite"
readme = "README.md"
keywords = ["web", "blog", "static", "site", "html"]
exclude = [
    "example/content",
    "example/site",
    "example/target",
    "example/ai",
    "example/scripts",
    "marmitesite/",
    "assets/",
    "python/",
    ".github/",
    "Dockerfile",
    "CONTEXT.md",
    "CONTRIBUTING.md",
    "docs_report.md",
]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
hotwatch = "0.5"
tera = {version = "1.20", features = ["preserve_order"]}
comrak = { version = "0.49.0", features = ["shortcodes"], default-features = false }
walkdir = "2.5"
chrono = { version = "0.4", features = ["serde"] }
frontmatter-gen = { version = "0.0.5", features=["default"] }
tiny_http = "0.12"
tungstenite = "0.28"
clap = { version = "4.5.54", features = ["derive"] }
fs_extra = "1.3"
regex = "1"
unicode-normalization = "0.1"
slug = "0.1"
log = "0.4"
env_logger = "0.11.8"
url = "2.5.8"
rust-embed = { version = "8.9.0", features = ["interpolate-folder-path"] }
glob = "0.3"
lazy_static = "1.5.0"
indexmap = { version = "2.13.0", features = ["serde"] }
rss = "2.0.12"
rayon = "1.11.0"
ureq = "3.1.4"
zip = "7.0.0"
urlencoding = "2.1.3"
image = "0.25.9"
tempfile = "3.24.0"
arborium = { version = "2.16", default-features = false }

[features]
default = ["highlight-default-languages"]

# Every permissively-licensed grammar arborium ships.
# Some language grammars are under licenses which would impose requirements on your code
# (e.g. nginx's is GPL).
# The list has to be enumerated because arborium's `default` feature is empty,
# and no permissive-only meta-feature exists (https://github.com/bearcove/arborium/issues/172).
# Refer to https://docs.rs/arborium/latest/arborium/ when updating.
highlight-default-languages = [
    "arborium/lang-ada",
    "arborium/lang-agda",
    "arborium/lang-asciidoc",
    "arborium/lang-asm",
    "arborium/lang-awk",
    "arborium/lang-bash",
    "arborium/lang-batch",
    "arborium/lang-c",
    "arborium/lang-c-sharp",
    "arborium/lang-caddy",
    "arborium/lang-capnp",
    "arborium/lang-cedar",
    "arborium/lang-cedarschema",
    "arborium/lang-clojure",
    "arborium/lang-cmake",
    "arborium/lang-cobol",
    "arborium/lang-commonlisp",
    "arborium/lang-cpp",
    "arborium/lang-css",
    "arborium/lang-d",
    "arborium/lang-dart",
    "arborium/lang-devicetree",
    "arborium/lang-diff",
    "arborium/lang-dockerfile",
    "arborium/lang-dot",
    "arborium/lang-elisp",
    "arborium/lang-elixir",
    "arborium/lang-elm",
    "arborium/lang-erlang",
    "arborium/lang-fish",
    "arborium/lang-fsharp",
    "arborium/lang-gleam",
    "arborium/lang-glsl",
    "arborium/lang-go",
    "arborium/lang-graphql",
    "arborium/lang-groovy",
    "arborium/lang-haskell",
    "arborium/lang-hcl",
    "arborium/lang-hlsl",
    "arborium/lang-html",
    "arborium/lang-idris",
    "arborium/lang-ini",
    "arborium/lang-java",
    "arborium/lang-javascript",
    "arborium/lang-jinja2",
    "arborium/lang-jq",
    "arborium/lang-json",
    "arborium/lang-julia",
    "arborium/lang-kotlin",
    "arborium/lang-lean",
    "arborium/lang-lua",
    "arborium/lang-markdown",
    "arborium/lang-matlab",
    "arborium/lang-meson",
    "arborium/lang-ninja",
    "arborium/lang-nix",
    "arborium/lang-objc",
    "arborium/lang-ocaml",
    "arborium/lang-perl",
    "arborium/lang-php",
    "arborium/lang-postscript",
    "arborium/lang-powershell",
    "arborium/lang-prolog",
    "arborium/lang-python",
    "arborium/lang-query",
    "arborium/lang-r",
    "arborium/lang-rego",
    "arborium/lang-rescript",
    "arborium/lang-ron",
    "arborium/lang-ruby",
    "arborium/lang-rust",
    "arborium/lang-scala",
    "arborium/lang-scheme",
    "arborium/lang-scss",
    "arborium/lang-solidity",
    "arborium/lang-sparql",
    "arborium/lang-sql",
    "arborium/lang-ssh-config",
    "arborium/lang-starlark",
    "arborium/lang-styx",
    "arborium/lang-svelte",
    "arborium/lang-swift",
    "arborium/lang-textproto",
    "arborium/lang-thrift",
    "arborium/lang-tlaplus",
    "arborium/lang-toml",
    "arborium/lang-tsx",
    "arborium/lang-typescript",
    "arborium/lang-typst",
    "arborium/lang-uiua",
    "arborium/lang-vb",
    "arborium/lang-verilog",
    "arborium/lang-vhdl",
    "arborium/lang-vim",
    "arborium/lang-vue",
    "arborium/lang-wit",
    "arborium/lang-x86asm",
    "arborium/lang-xml",
    "arborium/lang-yaml",
    "arborium/lang-yuri",
    "arborium/lang-zig",
    "arborium/lang-zsh",
]

# Enables every arborium grammar.
# This is opt-in, since it may place stricter redistribution obligations on the resulting binary.
# See https://docs.rs/arborium/latest/arborium/ for the per-grammar license breakdown.
highlight-all-languages = ["arborium/all-languages"]

[dev-dependencies]

[profile.release]
codegen-units = 1
incremental = false
panic = "abort"
lto = true
opt-level = "s"
strip = true

[profile.dev]
incremental = false
