[package]
name = "marmite-playground"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Interactive web playground for the Marmite static site generator"
publish = false

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tower-http = { version = "0.6", features = ["fs", "set-header"] }
tower = "0.5"
tar = "0.4"
flate2 = "1"
zip = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
